something went screwy. reloading

--- a/04-pandas-challenge/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/04-pandas-challenge/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "0            576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 338,
    "metadata": {
     "scrolled": true
    },
@@ -275,7 +275,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "40+                               $3.19  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 345,
    "metadata": {
     "scrolled": true
    },
@@ -1310,7 +1310,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,9 +1332,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonUCI]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonUCI-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
