Got it to go 50 at a time

--- a/06-python-api-challenge/WeatherPy/WeatherPy.ipynb
+++ b/06-python-api-challenge/WeatherPy/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -28,6 +28,7 @@
     "from scipy.stats import linregress\n",
     "import random \n",
     "import csv\n",
+    "import time\n",
     "\n",
     "from api_keys import weather_api_key\n",
     "from citipy import citipy"
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -201,11 +202,11 @@
       "Processing Record 2 Set 1 | tiksi\n",
       "Processing Record 3 Set 1 | shingu\n",
       "Processing Record 4 Set 1 | atuona\n",
-      "Processing Record 5 Set 1 | fuerte+olimpo\n",
-      "Processing Record 6 Set 1 | severo-kurilsk\n",
-      "Processing Record 7 Set 1 | busselton\n",
-      "Processing Record 8 Set 1 | lagoa\n",
-      "Processing Record 9 Set 1 | yongan\n"
+      "Processing Record 0 Set 2 | fuerte+olimpo\n",
+      "Processing Record 1 Set 2 | severo-kurilsk\n",
+      "Processing Record 2 Set 2 | busselton\n",
+      "Processing Record 3 Set 2 | lagoa\n",
+      "Processing Record 4 Set 2 | yongan\n"
      ]
     }
    ],
@@ -247,6 +248,8 @@
     "units = \"imperial\"\n",
     "\n",
     "set = 1\n",
+    "count = 0\n",
+    "\n",
     "\n",
     "for index, row in city_df_mini.iterrows():\n",
     "    # make query URLs (yay works)\n",
@@ -256,31 +259,9 @@
     "    #get response json()\n",
     "    response = requests.get(query_url).json()\n",
     "\n",
-    "    # trying to break down into sets somehow\n",
-    "#     for x in index:\n",
-    "        \n",
-    "#         if x == _______:\n",
-    " \n",
-    "#             # SHOVE IT IN DATAFRAME IF EXISTS!!!!!!\n",
-    "#             try: \n",
-    "#                 print(f\"Processing Record {index} Set {set} | {city}\")\n",
-    "#                 city_df_mini.loc[index, 'City Name'] = response['name']\n",
-    "#                 city_df_mini.loc[index, 'Lat'] = response['coord']['lat']\n",
-    "#                 city_df_mini.loc[index, 'Lng'] = response['coord']['lon']\n",
-    "#                 city_df_mini.loc[index, 'Max Temp'] = response['main']['temp_max']\n",
-    "#                 city_df_mini.loc[index, 'Humidity'] = response['main']['humidity']\n",
-    "#                 city_df_mini.loc[index, 'Cloudiness'] = response['clouds']['all']\n",
-    "#                 city_df_mini.loc[index, 'Wind Speed'] = response['wind']['speed']\n",
-    "#                 city_df_mini.loc[index, 'Country'] = response['sys']['country']\n",
-    "#                 city_df_mini.loc[index, 'Date'] = response['dt']\n",
-    "#             except(KeyError, IndexError):\n",
-    "#                 print(f\"{city} not found. Skipping...\")\n",
-    "            \n",
-    "#             set += 1\n",
-    "\n",
-    "# FOR MINI DATA FRAME\n",
+    "    # SHOVE IT IN DATAFRAME IF EXISTS!!!!!!\n",
     "    try: \n",
-    "        print(f\"Processing Record {index} Set {set} | {city}\")\n",
+    "        print(f\"Processing Record {count} Set {set} | {city}\")\n",
     "        city_df_mini.loc[index, 'City Name'] = response['name']\n",
     "        city_df_mini.loc[index, 'Lat'] = response['coord']['lat']\n",
     "        city_df_mini.loc[index, 'Lng'] = response['coord']['lon']\n",
@@ -290,18 +271,16 @@
     "        city_df_mini.loc[index, 'Wind Speed'] = response['wind']['speed']\n",
     "        city_df_mini.loc[index, 'Country'] = response['sys']['country']\n",
     "        city_df_mini.loc[index, 'Date'] = response['dt']\n",
+    "        count += 1\n",
     "    except(KeyError, IndexError):\n",
     "        print(f\"{city} not found. Skipping...\")\n",
-    "    \n",
-    "### RATE LIMIT = 60 per minute\n",
-    "\n",
-    "# city_df_mini\n",
-    "# print(query_url)\n",
-    "##### ***** CITY DF MINI WOKRS .....just need to figure out how to split into sets\n",
-    "### **** USE CITY MIN TO split into 2 and see if you can get it to work DO NOT USE FULL\n",
-    "#### *** LOOK AT Stu_Retrieve_Articles (01, 12 lesson) & Ins_IterativeRequests (1, 09)\n",
-    "\n",
-    "# will need to get rid of \"City\" column (has +), and check that blank rows are gone"
+    "        count += 1\n",
+    "        \n",
+    "    if count == 5:\n",
+    "        set += 1\n",
+    "        time.sleep(40)\n",
+    "        count = 0\n",
+    "        \n"
    ]
   },
   {
