--- a/06-python-api-challenge/VacationPy/VacationPy.ipynb
+++ b/06-python-api-challenge/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Clearwater</td>\n",
+       "      <td>27.97</td>\n",
+       "      <td>-82.80</td>\n",
+       "      <td>81.00</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.93</td>\n",
+       "      <td>1602980412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Guaraniaçu</td>\n",
+       "      <td>-25.10</td>\n",
+       "      <td>-52.88</td>\n",
+       "      <td>61.74</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>1602980697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Vila Franca do Campo</td>\n",
+       "      <td>37.72</td>\n",
+       "      <td>-25.43</td>\n",
+       "      <td>62.60</td>\n",
+       "      <td>67</td>\n",
+       "      <td>75</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>1602980697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Meulaboh</td>\n",
+       "      <td>4.14</td>\n",
+       "      <td>96.13</td>\n",
+       "      <td>75.72</td>\n",
+       "      <td>82</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>1602980210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Norman Wells</td>\n",
+       "      <td>65.28</td>\n",
+       "      <td>-126.83</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>57</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>1602980676</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0            Clearwater  27.97  -82.80     81.00        61           2   \n",
+       "1            Guaraniaçu -25.10  -52.88     61.74        67          58   \n",
+       "2  Vila Franca do Campo  37.72  -25.43     62.60        67          75   \n",
+       "3              Meulaboh   4.14   96.13     75.72        82         100   \n",
+       "4          Norman Wells  65.28 -126.83     23.00        57           5   \n",
+       "\n",
+       "   Wind Speed        Date  \n",
+       "0        6.93  1602980412  \n",
+       "1        3.11  1602980697  \n",
+       "2        8.05  1602980697  \n",
+       "3        4.09  1602980210  \n",
+       "4        5.82  1602980676  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "cities_csv = pd.read_csv('../output_data/cities.csv')\n",
+    "cities_csv.head()"
    ]
   },
   {
@@ -60,17 +173,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gmaps.configure(api_key=g_key)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb5bf22f03a74d839ed09810ac427766",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "locations = cities_csv[[\"Lat\", \"Lng\"]].astype(float)\n",
+    "humidity_weight = cities_csv['Humidity'].astype(float)\n",
+    "\n",
+    "# create figure\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity_weight, \n",
+    "                                 dissipating=False, max_intensity=200, point_radius=4)\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "fig\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,10 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# MY IDEAL WEATHER HAS CLOUDS!!!!!!! therefore...\n",
+    "\n",
+    "# A max temperature lower than 80 degrees but higher than 50.\n",
+    "# Wind speed less than 15 mph.\n",
+    "# More than 10% cloudiness.\n",
+    "\n",
+    "\n",
+    "ideal_weather_df = cities_csv.copy()\n",
+    "ideal_weather_df = ideal_weather_df[(ideal_weather_df['Max Temp'] < 80) & (ideal_weather_df['Max Temp'] > 50)]\n",
+    "ideal_weather_df = ideal_weather_df[ideal_weather_df[\"Wind Speed\"] <= 15]\n",
+    "ideal_weather_df = ideal_weather_df[ideal_weather_df[\"Cloudiness\"] >= 10]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +257,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Guaraniaçu</td>\n",
+       "      <td>-25.10</td>\n",
+       "      <td>-52.88</td>\n",
+       "      <td>61.74</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>1602980697</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Vila Franca do Campo</td>\n",
+       "      <td>37.72</td>\n",
+       "      <td>-25.43</td>\n",
+       "      <td>62.60</td>\n",
+       "      <td>67</td>\n",
+       "      <td>75</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>1602980697</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Meulaboh</td>\n",
+       "      <td>4.14</td>\n",
+       "      <td>96.13</td>\n",
+       "      <td>75.72</td>\n",
+       "      <td>82</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>1602980210</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Puerto Ayora</td>\n",
+       "      <td>-0.74</td>\n",
+       "      <td>-90.35</td>\n",
+       "      <td>71.01</td>\n",
+       "      <td>87</td>\n",
+       "      <td>87</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>1602980698</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Hong Kong</td>\n",
+       "      <td>22.29</td>\n",
+       "      <td>114.16</td>\n",
+       "      <td>73.99</td>\n",
+       "      <td>74</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1602980682</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "1            Guaraniaçu -25.10  -52.88     61.74        67          58   \n",
+       "2  Vila Franca do Campo  37.72  -25.43     62.60        67          75   \n",
+       "3              Meulaboh   4.14   96.13     75.72        82         100   \n",
+       "6          Puerto Ayora  -0.74  -90.35     71.01        87          87   \n",
+       "8             Hong Kong  22.29  114.16     73.99        74          57   \n",
+       "\n",
+       "   Wind Speed        Date Hotel Name  \n",
+       "1        3.11  1602980697             \n",
+       "2        8.05  1602980697             \n",
+       "3        4.09  1602980210             \n",
+       "6        5.99  1602980698             \n",
+       "8        1.99  1602980682             "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df = ideal_weather_df.copy()\n",
+    "hotel_df['Hotel Name'] = \"\"\n",
+    "hotel_df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,9 +435,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python [conda env:PythonUCI]",
    "language": "python",
-   "name": "pydev"
+   "name": "conda-env-PythonUCI-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
