--- a/06-python-api-challenge/VacationPy/VacationPy.ipynb
+++ b/06-python-api-challenge/VacationPy/VacationPy.ipynb
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89852495d3814299a8a129776b787f89",
+       "model_id": "dc2145be520d403eb1889c595df5caea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "46  1603111928      CA             "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "[181 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,14 +716,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4305fca10b0d47b983440241302d07d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "markers = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "\n",
+    "# Display figure\n",
     "\n",
-    "# Display figure\n"
+    "gmaps.configure(api_key=g_key)\n",
+    "\n",
+    "locations = cities_csv[[\"Lat\", \"Lng\"]].astype(float)\n",
+    "humidity_weight = cities_csv['Humidity'].astype(float)\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity_weight, dissipating=False, max_intensity=200, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(markers)\n",
+    "fig\n"
    ]
   },
   {
