--- a/06-python-api-challenge/VacationPy/VacationPy.ipynb
+++ b/06-python-api-challenge/VacationPy/VacationPy.ipynb
@@ -189,12 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc2145be520d403eb1889c595df5caea",
+       "model_id": "92d140d49ec04fcc9956189d534f0275",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,16 +210,21 @@
    ],
    "source": [
     "locations = cities_csv[[\"Lat\", \"Lng\"]].astype(float)\n",
+    "max_humdity = cities_csv['Humidity'].max().astype(float)\n",
+    "\n",
+    "\n",
     "humidity_weight = cities_csv['Humidity'].astype(float)\n",
     "\n",
     "# create figure\n",
     "fig = gmaps.figure()\n",
     "\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=humidity_weight, \n",
-    "                                 dissipating=False, max_intensity=200, point_radius=4)\n",
+    "                                 dissipating=False, max_intensity=max_humdity, \n",
+    "                                 point_radius=2)\n",
     "fig.add_layer(heat_layer)\n",
     "\n",
-    "fig\n"
+    "\n",
+    "fig"
    ]
   },
   {
@@ -235,16 +242,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MY IDEAL WEATHER HAS CLOUDS!!!!!!! therefore...\n",
-    "\n",
-    "# A max temperature lower than 80 degrees but higher than 50.\n",
-    "# Wind speed less than 15 mph.\n",
+    "# A max temperature lower than 70 degrees but higher than 60.\n",
+    "# Wind speed less than 5 mph.\n",
     "# More than 10% cloudiness.\n",
     "\n",
     "\n",
     "ideal_weather_df = cities_csv.copy()\n",
-    "ideal_weather_df = ideal_weather_df[(ideal_weather_df['Max Temp'] < 80) & (ideal_weather_df['Max Temp'] > 50)]\n",
-    "ideal_weather_df = ideal_weather_df[ideal_weather_df[\"Wind Speed\"] <= 15]\n",
+    "ideal_weather_df = ideal_weather_df[(ideal_weather_df['Max Temp'] < 70) & (ideal_weather_df['Max Temp'] > 60)]\n",
+    "ideal_weather_df = ideal_weather_df[ideal_weather_df[\"Wind Speed\"] <= 5]\n",
     "ideal_weather_df = ideal_weather_df[ideal_weather_df[\"Cloudiness\"] >= 10]"
    ]
   },
@@ -266,6 +271,13 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -314,19 +326,6 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Messíni</td>\n",
-       "      <td>37.05</td>\n",
-       "      <td>22.01</td>\n",
-       "      <td>73.00</td>\n",
-       "      <td>60</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2.82</td>\n",
-       "      <td>1603111970</td>\n",
-       "      <td>GR</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Geraldton</td>\n",
        "      <td>-28.77</td>\n",
@@ -340,29 +339,42 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Saint-Philippe</td>\n",
-       "      <td>-21.36</td>\n",
-       "      <td>55.77</td>\n",
-       "      <td>78.01</td>\n",
-       "      <td>68</td>\n",
-       "      <td>32</td>\n",
-       "      <td>5.99</td>\n",
-       "      <td>1603111974</td>\n",
-       "      <td>RE</td>\n",
+       "      <th>119</th>\n",
+       "      <td>Gorodovikovsk</td>\n",
+       "      <td>46.09</td>\n",
+       "      <td>41.93</td>\n",
+       "      <td>60.94</td>\n",
+       "      <td>91</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>1603112112</td>\n",
+       "      <td>RU</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Torbay</td>\n",
-       "      <td>47.67</td>\n",
-       "      <td>-52.73</td>\n",
-       "      <td>53.01</td>\n",
-       "      <td>94</td>\n",
-       "      <td>100</td>\n",
-       "      <td>4.94</td>\n",
-       "      <td>1603111928</td>\n",
-       "      <td>CA</td>\n",
+       "      <th>126</th>\n",
+       "      <td>Sakaiminato</td>\n",
+       "      <td>35.55</td>\n",
+       "      <td>133.23</td>\n",
+       "      <td>62.92</td>\n",
+       "      <td>52</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>1603112113</td>\n",
+       "      <td>JP</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>Khonsa</td>\n",
+       "      <td>27.02</td>\n",
+       "      <td>95.57</td>\n",
+       "      <td>66.85</td>\n",
+       "      <td>96</td>\n",
+       "      <td>70</td>\n",
+       "      <td>4.41</td>\n",
+       "      <td>1603112176</td>\n",
+       "      <td>IN</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -372,17 +384,17 @@
       "text/plain": [
        "              City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
        "17        Flinders -34.58  150.86     62.01        78         100        1.01   \n",
-       "22         Messíni  37.05   22.01     73.00        60          99        2.82   \n",
        "28       Geraldton -28.77  114.60     66.99        76          87        4.00   \n",
-       "41  Saint-Philippe -21.36   55.77     78.01        68          32        5.99   \n",
-       "46          Torbay  47.67  -52.73     53.01        94         100        4.94   \n",
+       "119  Gorodovikovsk  46.09   41.93     60.94        91         100        3.83   \n",
+       "126    Sakaiminato  35.55  133.23     62.92        52          96        2.80   \n",
+       "142         Khonsa  27.02   95.57     66.85        96          70        4.41   \n",
        "\n",
-       "          Date Country Hotel Name  \n",
-       "17  1603111969      AU             \n",
-       "22  1603111970      GR             \n",
-       "28  1603111971      AU             \n",
-       "41  1603111974      RE             \n",
-       "46  1603111928      CA             "
+       "           Date Country Hotel Name  \n",
+       "17   1603111969      AU             \n",
+       "28   1603111971      AU             \n",
+       "119  1603112112      RU             \n",
+       "126  1603112113      JP             \n",
+       "142  1603112176      IN             "
       ]
      },
      "execution_count": 6,
@@ -393,6 +405,7 @@
    "source": [
     "hotel_df = ideal_weather_df.copy()\n",
     "hotel_df['Hotel Name'] = \"\"\n",
+    "print(hotel_df.City.count())\n",
     "hotel_df.head()"
    ]
   },
@@ -407,7 +420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There were 13 errors\n"
+      "There were 3 errors\n"
      ]
     }
    ],
@@ -506,19 +519,6 @@
        "      <td>Shellharbour Beachside Holiday Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Messíni</td>\n",
-       "      <td>37.05</td>\n",
-       "      <td>22.01</td>\n",
-       "      <td>73.00</td>\n",
-       "      <td>60</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2.82</td>\n",
-       "      <td>1603111970</td>\n",
-       "      <td>GR</td>\n",
-       "      <td>GMP Bouka Resort Hotel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Geraldton</td>\n",
        "      <td>-28.77</td>\n",
@@ -532,155 +532,62 @@
        "      <td>Hospitality Geraldton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Saint-Philippe</td>\n",
-       "      <td>-21.36</td>\n",
-       "      <td>55.77</td>\n",
-       "      <td>78.01</td>\n",
-       "      <td>68</td>\n",
-       "      <td>32</td>\n",
-       "      <td>5.99</td>\n",
-       "      <td>1603111974</td>\n",
-       "      <td>RE</td>\n",
-       "      <td>Le four à pain</td>\n",
+       "      <th>126</th>\n",
+       "      <td>Sakaiminato</td>\n",
+       "      <td>35.55</td>\n",
+       "      <td>133.23</td>\n",
+       "      <td>62.92</td>\n",
+       "      <td>52</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>1603112113</td>\n",
+       "      <td>JP</td>\n",
+       "      <td>Italian pasley</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Torbay</td>\n",
-       "      <td>47.67</td>\n",
-       "      <td>-52.73</td>\n",
-       "      <td>53.01</td>\n",
-       "      <td>94</td>\n",
+       "      <th>237</th>\n",
+       "      <td>Wanxian</td>\n",
+       "      <td>30.80</td>\n",
+       "      <td>108.39</td>\n",
+       "      <td>63.57</td>\n",
+       "      <td>78</td>\n",
        "      <td>100</td>\n",
-       "      <td>4.94</td>\n",
-       "      <td>1603111928</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>See The Sea</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>1603112318</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>Kinglead Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>666</th>\n",
-       "      <td>Ichhāwar</td>\n",
-       "      <td>23.02</td>\n",
-       "      <td>77.02</td>\n",
-       "      <td>78.22</td>\n",
-       "      <td>74</td>\n",
-       "      <td>97</td>\n",
-       "      <td>4.05</td>\n",
-       "      <td>1603112962</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>Hotel Dreem</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>669</th>\n",
-       "      <td>Zhezkazgan</td>\n",
-       "      <td>47.80</td>\n",
-       "      <td>67.71</td>\n",
-       "      <td>55.81</td>\n",
-       "      <td>47</td>\n",
-       "      <td>41</td>\n",
-       "      <td>5.01</td>\n",
-       "      <td>1603112962</td>\n",
-       "      <td>KZ</td>\n",
-       "      <td>Kosmos</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>675</th>\n",
-       "      <td>Fleetwood</td>\n",
-       "      <td>53.93</td>\n",
-       "      <td>-3.01</td>\n",
-       "      <td>55.00</td>\n",
-       "      <td>82</td>\n",
+       "      <th>263</th>\n",
+       "      <td>Camacha</td>\n",
+       "      <td>33.08</td>\n",
+       "      <td>-16.33</td>\n",
+       "      <td>67.57</td>\n",
+       "      <td>77</td>\n",
        "      <td>100</td>\n",
-       "      <td>8.99</td>\n",
-       "      <td>1603112964</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>Savoy Hotel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>678</th>\n",
-       "      <td>Alyangula</td>\n",
-       "      <td>-13.85</td>\n",
-       "      <td>136.42</td>\n",
-       "      <td>79.57</td>\n",
-       "      <td>74</td>\n",
-       "      <td>57</td>\n",
-       "      <td>9.04</td>\n",
-       "      <td>1603112965</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>SRA U Block containers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>679</th>\n",
-       "      <td>Myślibórz</td>\n",
-       "      <td>52.92</td>\n",
-       "      <td>14.87</td>\n",
-       "      <td>53.01</td>\n",
-       "      <td>56</td>\n",
-       "      <td>100</td>\n",
-       "      <td>9.80</td>\n",
-       "      <td>1603112965</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>PIAST Usługi Hotelarskie Gastronomiczno-Rozryw...</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>1603112324</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>Hotel Praia Dourada</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>181 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "17         Flinders -34.58  150.86     62.01        78         100   \n",
-       "22          Messíni  37.05   22.01     73.00        60          99   \n",
-       "28        Geraldton -28.77  114.60     66.99        76          87   \n",
-       "41   Saint-Philippe -21.36   55.77     78.01        68          32   \n",
-       "46           Torbay  47.67  -52.73     53.01        94         100   \n",
-       "..              ...    ...     ...       ...       ...         ...   \n",
-       "666        Ichhāwar  23.02   77.02     78.22        74          97   \n",
-       "669      Zhezkazgan  47.80   67.71     55.81        47          41   \n",
-       "675       Fleetwood  53.93   -3.01     55.00        82         100   \n",
-       "678       Alyangula -13.85  136.42     79.57        74          57   \n",
-       "679       Myślibórz  52.92   14.87     53.01        56         100   \n",
+       "            City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "17      Flinders -34.58  150.86     62.01        78         100        1.01   \n",
+       "28     Geraldton -28.77  114.60     66.99        76          87        4.00   \n",
+       "126  Sakaiminato  35.55  133.23     62.92        52          96        2.80   \n",
+       "237      Wanxian  30.80  108.39     63.57        78         100        2.71   \n",
+       "263      Camacha  33.08  -16.33     67.57        77         100        3.80   \n",
        "\n",
-       "     Wind Speed        Date Country  \\\n",
-       "17         1.01  1603111969      AU   \n",
-       "22         2.82  1603111970      GR   \n",
-       "28         4.00  1603111971      AU   \n",
-       "41         5.99  1603111974      RE   \n",
-       "46         4.94  1603111928      CA   \n",
-       "..          ...         ...     ...   \n",
-       "666        4.05  1603112962      IN   \n",
-       "669        5.01  1603112962      KZ   \n",
-       "675        8.99  1603112964      GB   \n",
-       "678        9.04  1603112965      AU   \n",
-       "679        9.80  1603112965      PL   \n",
-       "\n",
-       "                                            Hotel Name  \n",
-       "17                 Shellharbour Beachside Holiday Park  \n",
-       "22                              GMP Bouka Resort Hotel  \n",
-       "28                               Hospitality Geraldton  \n",
-       "41                                      Le four à pain  \n",
-       "46                                         See The Sea  \n",
-       "..                                                 ...  \n",
-       "666                                        Hotel Dreem  \n",
-       "669                                             Kosmos  \n",
-       "675                                        Savoy Hotel  \n",
-       "678                             SRA U Block containers  \n",
-       "679  PIAST Usługi Hotelarskie Gastronomiczno-Rozryw...  \n",
-       "\n",
-       "[181 rows x 10 columns]"
+       "           Date Country                           Hotel Name  \n",
+       "17   1603111969      AU  Shellharbour Beachside Holiday Park  \n",
+       "28   1603111971      AU                Hospitality Geraldton  \n",
+       "126  1603112113      JP                       Italian pasley  \n",
+       "237  1603112318      CN                       Kinglead Hotel  \n",
+       "263  1603112324      PT                  Hotel Praia Dourada  "
       ]
      },
      "execution_count": 9,
@@ -689,7 +596,7 @@
     }
    ],
    "source": [
-    "hotel_df"
+    "hotel_df.head()"
    ]
   },
   {
@@ -716,13 +623,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4305fca10b0d47b983440241302d07d2",
+       "model_id": "ac16d8d2b0c845d8a461e5c265e70795",
        "version_major": 2,
        "version_minor": 0
       },
@@ -740,15 +647,16 @@
     "\n",
     "# Display figure\n",
     "\n",
-    "gmaps.configure(api_key=g_key)\n",
-    "\n",
     "locations = cities_csv[[\"Lat\", \"Lng\"]].astype(float)\n",
+    "max_humdity = cities_csv['Humidity'].max().astype(float)\n",
     "humidity_weight = cities_csv['Humidity'].astype(float)\n",
     "\n",
+    "# create figure\n",
     "fig = gmaps.figure()\n",
     "\n",
-    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity_weight, dissipating=False, max_intensity=200, point_radius=4)\n",
-    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity_weight, \n",
+    "                                 dissipating=False, max_intensity=max_humdity, \n",
+    "                                 point_radius=2)\n",
     "fig.add_layer(heat_layer)\n",
     "fig.add_layer(markers)\n",
     "fig\n"
