Making progress on SQLA HW

--- a/08-sqlalchemy-challenge/climate_starter.ipynb
+++ b/08-sqlalchemy-challenge/climate_starter.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1172,7 +1172,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1184,7 @@
     "      Measurement.prcp]\n",
     "\n",
     "last_12 = (session.query(*sel)\n",
-    " .filter(Measurement.date > query_date)\n",
+    " .filter(Measurement.date > '2016-08-23')\n",
     " .all())\n",
     "\n",
     "last_12"
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
        "[2223 rows x 1 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,20 +1311,42 @@
    "outputs": [],
    "source": [
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "\n",
+    "# labels = ['2016-08-23', '2016-10-01', '2016-11-09', '2016-12-19', '2017-01-28', \n",
+    "#           '2017-03-09', '2017-04-18', '2017-05-31', '2017-07-10']\n",
+    "\n",
     "df = pd.DataFrame(last_12_df, columns=['date', 'prcp'])\n",
-    "df.set_index('date', inplace=True)\n",
+    "df.set_index('date')\n",
     "df.plot.bar()\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Inches')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.xticks(rotation=90)\n",
+    "df.set_ticklabels(df.get_ticklabels()[::39])\n",
+    "# plt.xticks(labels, rotation='vertical')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of Precipitation: 355.57000000000005\n",
+      "Mean of Precipitation: 0.17646153846153848\n",
+      "Median of Precipitation: 0.02\n"
+     ]
+    }
+   ],
    "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data\n"
+    "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
+    "print(f\"Sum of Precipitation: {last_12_df.prcp.sum()}\")\n",
+    "print(f\"Mean of Precipitation: {last_12_df.prcp.mean()}\")\n",
+    "print(f\"Median of Precipitation: {last_12_df.prcp.median()}\")"
    ]
   },
   {
@@ -1336,41 +1358,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Design a query to show how many stations are available in this dataset?\n"
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "(session.query(Station.station)\n",
+    " .count())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "(session.query(Measurement.station, func.count(Measurement.date))\n",
+    " .group_by(Measurement.station)\n",
+    " .order_by(func.count(Measurement.date).desc())\n",
+    " .all())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature of the most active station?\n"
+    "# highest temperature recorded, and average temperature of the most active station?\n",
+    "\n",
+    "sel = [Measurement.station, \n",
+    "       func.min(Measurement.tobs), \n",
+    "       func.max(Measurement.tobs), \n",
+    "       func.avg(Measurement.tobs)]\n",
+    "\n",
+    "(session.query(*sel)\n",
+    ".filter(Measurement.station == 'USC00519281')\n",
+    ".all())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Choose the station with the highest number of temperature observations.\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "(session.query(Measurement.station, func.count(Measurement.tobs))\n",
+    " .group_by(Measurement.station)\n",
+    " .order_by(func.count(Measurement.tobs).desc())\n",
+    " .all())"
    ]
   },
   {
@@ -1382,9 +1483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(62.0, 69.57142857142857, 74.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n",
@@ -1408,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,9 +1550,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(62.0, 69.15384615384616, 77.0)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a query that will calculate the daily normals \n",
     "# (i.e. the averages for tmin, tmax, and tavg for all historic data matching a specific month and day)\n",
@@ -1467,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
