Progress on SQLA HW - stuck on Step 2

--- a/08-sqlalchemy-challenge/climate_starter.ipynb
+++ b/08-sqlalchemy-challenge/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1172,7 +1172,7 @@
        " ...]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,12 +1188,13 @@
     " .filter(Measurement.date <= '2017-08-23')\n",
     " .all())\n",
     "\n",
-    "last_12"
+    "last_12\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1273,7 +1274,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1797 rows × 1 columns</p>\n",
+       "<p>2230 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1291,10 +1292,10 @@
        "2017-08-23  0.08\n",
        "2017-08-23  0.45\n",
        "\n",
-       "[1797 rows x 1 columns]"
+       "[2230 rows x 1 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1348,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1425,7 @@
        "max       6.700000"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1453,7 @@
        "9"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1483,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1508,7 @@
        "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1644,7 @@
        "[(62.0, 69.15384615384616, 77.0)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,12 +1699,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the daily normals as an area plot with `stacked=False`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(56.0, 78.0, 69.24875621890547)]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sel = [func.min(Measurement.tobs), \n",
+    "    func.max(Measurement.tobs), \n",
+    "    func.avg(Measurement.tobs)]\n",
+    "\n",
+    "start_session = (session.query(*sel)\n",
+    ".filter(Measurement.date <= '2010-01-31')\n",
+    ".all())\n",
+    "\n",
+    "start_session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'min': 56.0, 'max': 78.0, 'avg': 69.24875621890547}]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_only = []\n",
+    "\n",
+    "for min, max, avg in start_session:\n",
+    "    start_dict = {}\n",
+    "    start_dict[\"min\"] = min\n",
+    "    start_dict[\"max\"] = max\n",
+    "    start_dict[\"avg\"] = avg\n",
+    "    start_only.append(start_dict)\n",
+    "    \n",
+    "start_only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
