Got the srape to work, last step is getting CSS styling to apply

--- a/10-web-scraping-challenge/Missions_to_Mars/mission_to_mars.ipynb
+++ b/10-web-scraping-challenge/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Current google-chrome version is 87.0.4280\n",
-      "[WDM] - Get LATEST driver version for 87.0.4280\n"
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Driver [/Users/cassie/.wdm/drivers/chromedriver/mac64/88.0.4324.27/chromedriver] found in cache\n"
      ]
     },
     {
@@ -18,16 +19,6 @@
      "output_type": "stream",
      "text": [
       " \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - There is no [mac64] chromedriver for browser 87.0.4280 in cache\n",
-      "[WDM] - Get LATEST driver version for 87.0.4280\n",
-      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/87.0.4280.88/chromedriver_mac64.zip\n",
-      "[WDM] - Driver has been saved in cache [/Users/cassie/.wdm/drivers/chromedriver/mac64/87.0.4280.88]\n"
      ]
     }
    ],
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -2856,6 +2847,175 @@
    "source": [
     "# clicky click soup for hemi\n",
     "soup_clicked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TRYING OUT SCRAPE --- ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape():\n",
+    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "\n",
+    "    # NASA Mars News\n",
+    "    with  Browser('chrome', **executable_path, headless=True) as browser:\n",
+    "        url = 'https://mars.nasa.gov/news/'\n",
+    "        browser.visit(url)\n",
+    "        html = browser.html\n",
+    "        soup = BeautifulSoup(html, 'html.parser')\n",
+    "        news_title = soup.find('div', class_='bottom_gradient').get_text()\n",
+    "        news_p = soup.find('div', class_='article_teaser_body').get_text()\n",
+    "\n",
+    "    # JPL Mars Images\n",
+    "    with  Browser('chrome', **executable_path, headless=False) as browser:\n",
+    "        url_jpl = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "        browser.visit(url_jpl)\n",
+    "        full_image = browser.find_by_id('full_image')\n",
+    "        full_image.click()\n",
+    "        linked_site = browser.find_link_by_partial_text('more info')\n",
+    "        linked_site.click()\n",
+    "        html_jpl = browser.html\n",
+    "        soup_jpl = BeautifulSoup(html_jpl, 'html.parser')\n",
+    "        partial_url = soup_jpl.select_one('figure.lede a img').get('src')\n",
+    "        featured_image_url = f'https://www.jpl.nasa.gov{partial_url}'\n",
+    "\n",
+    "    # Mars Facts\n",
+    "    url_mars_facts = 'https://space-facts.com/mars/'\n",
+    "    tables = pd.read_html(url_mars_facts)\n",
+    "    mars_df = tables[0]\n",
+    "    mars_df_fixing = mars_df.rename(columns={0: 'Description', 1: 'Mars'})\n",
+    "    mars_facts_df = mars_df_fixing.set_index('Description')\n",
+    "    mars_facts_html = mars_facts_df.to_html()\n",
+    "\n",
+    "    # Mars Hemispheres\n",
+    "    with  Browser('chrome', **executable_path, headless=False) as browser:\n",
+    "        url_hemisphere = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "        browser.visit(url_hemisphere)\n",
+    "        html_hemisphere = browser.html\n",
+    "        soup_hemisphere = BeautifulSoup(html_hemisphere, 'html.parser')\n",
+    "        results = soup_hemisphere.find_all('div', class_='item')\n",
+    "\n",
+    "        hemisphere_image_urls = []\n",
+    "        for result in results:\n",
+    "            title_text = result.h3.text\n",
+    "            browser.click_link_by_partial_text(title_text)\n",
+    "            click_url = browser.url\n",
+    "            browser.visit(click_url)\n",
+    "            html_clicked = browser.html\n",
+    "            soup_clicked = BeautifulSoup(html_clicked, 'html.parser')\n",
+    "            img_url = soup_clicked.find('a', text='Sample')['href']\n",
+    "            hemisphere_image_urls.append({\"title\": title_text,\"img_url\": img_url})\n",
+    "            browser.back()        \n",
+    "        hemi_title_text1 = hemisphere_image_urls[0][\"title\"]\n",
+    "        hemi_title_text2 = hemisphere_image_urls[1][\"title\"]\n",
+    "        hemi_title_text3 = hemisphere_image_urls[2][\"title\"]\n",
+    "        hemi_title_text4 = hemisphere_image_urls[3][\"title\"]\n",
+    "        hemi_image_url1 = hemisphere_image_urls[0][\"img_url\"]\n",
+    "        hemi_image_url2 = hemisphere_image_urls[1][\"img_url\"]\n",
+    "        hemi_image_url3 = hemisphere_image_urls[2][\"img_url\"]\n",
+    "        hemi_image_url4 = hemisphere_image_urls[3][\"img_url\"]\n",
+    "\n",
+    "        \n",
+    "    return {\n",
+    "        \"news_tile\": news_title, \n",
+    "        \"news_p\": news_p,\n",
+    "        \"featured_image_url\": featured_image_url,\n",
+    "        \"mars_facts_html\": mars_facts_html,\n",
+    "        \"hemi_title_text1\": hemi_title_text1,\n",
+    "        \"hemi_title_text2\": hemi_title_text2,\n",
+    "        \"hemi_title_text3\": hemi_title_text3,\n",
+    "        \"hemi_title_text4\": hemi_title_text4,\n",
+    "        \"hemi_image_url1\": hemi_image_url1,\n",
+    "        \"hemi_image_url2\": hemi_image_url2,\n",
+    "        \"hemi_image_url3\": hemi_image_url3,\n",
+    "        \"hemi_image_url4\": hemi_image_url4,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Driver [/Users/cassie/.wdm/drivers/chromedriver/mac64/88.0.4324.27/chromedriver] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/pythonUCI/lib/python3.6/site-packages/splinter/driver/webdriver/__init__.py:493: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n",
+      "/opt/anaconda3/envs/pythonUCI/lib/python3.6/site-packages/splinter/driver/webdriver/__init__.py:493: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'news_tile': 'MOXIE Could Help Future Rockets Launch Off Mars',\n",
+       " 'news_p': \"NASA's Perseverance rover carries a device to convert Martian air into oxygen that, if produced on a larger scale, could be used not just for breathing, but also for fuel.\",\n",
+       " 'featured_image_url': 'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19808_hires.jpg',\n",
+       " 'mars_facts_html': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
+       " 'hemi_title_text1': 'Cerberus Hemisphere Enhanced',\n",
+       " 'hemi_title_text2': 'Schiaparelli Hemisphere Enhanced',\n",
+       " 'hemi_title_text3': 'Syrtis Major Hemisphere Enhanced',\n",
+       " 'hemi_title_text4': 'Valles Marineris Hemisphere Enhanced',\n",
+       " 'hemi_image_url1': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
+       " 'hemi_image_url2': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
+       " 'hemi_image_url3': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
+       " 'hemi_image_url4': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrape()\n"
    ]
   },
   {
